deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
    name: front-end
spec:
  replicas: 5
  selector:
    matchLabels:
      app: front
      name: front-end
  template:
    metadata:
      labels:
        app: front
        name: front-end
    spec:
      containers:
      - name: front
        image: 10.0.11.34:5000/front:latest
        ports:
        - containerPort: 3000


apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
    name: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer

   

........................................

apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  labels:
    app: back
    name: back-end
spec:
  replicas: 5
  selector:
    matchLabels:
      app: back
      name: back-end
  template:
    metadata:
      labels:
        app: back
        name: back-end
    spec:
      containers:
      - name: back
        image: 10.0.11.34:5000/back:latest
        ports:
        - containerPort: 3000


apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
    name: backend-app
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3001



..................................
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: frontend-service.local  # Use the hostname or IP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 80
    - host: backend-service.local   # Use the hostname or IP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-end-service
                port:
                  number: 3000
